--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "arvis-store",
   "version": "0.0.1",
-  "description": "Add your module to arvis-document, arvis-store and upload it to npm at once",
+  "description": "Retrieve info about Arvis extensions easily",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
