--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.1",
   "description": "Retrieve info about Arvis extensions easily",
   "main": "dist/index.js",
+  "bin": {
+    "arvis-store": "dist/cli/main.js",
+    "arvis-store-publish": "dist/lib/publish.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "rebuild": "rm -rf node_modules && npm i && npm run build",
-    "lint": "tslint --project tsconfig.json --fix"
+    "lint": "tslint --project tsconfig.json --fix",
+    "update-store": "ts-node lib/updateStore.ts"
   },
   "keywords": [
     "arvis",
@@ -16,9 +21,14 @@
   "author": "jopemachine",
   "license": "MIT",
   "devDependencies": {
+    "@types/fs-extra": "^9.0.11",
+    "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.5",
     "@types/semver": "^7.3.6",
+    "get-npm-downloads": "^0.0.4",
     "husky": "^4.2.5",
+    "latest-version": "^5.1.0",
+    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.4"
   },
@@ -26,7 +36,8 @@
     "arvis-extension-validator": "^0.2.0",
     "chalk": "^4.1.1",
     "execa": "^5.1.1",
-    "latest-version": "^5.1.0",
+    "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
     "meow": "^9.0.0",
     "ora": "^5.4.1",
     "semver": "^7.3.5"
