--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,14 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  update-store:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Runs a single command using the runners shell
-      - name: Update store
-        run: npm i && ./node_modules/.bin/ts-node lib/updateStore.ts
+      - name: npm install, update store
+        run: |
+          npm i
+          ./node_modules/.bin/ts-node lib/updateStore.ts
