--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,4 +23,4 @@ jobs:
       - name: npm install, update store
         run: |
           npm i
-          ./node_modules/.bin/ts-node lib/updateStore.ts
+          npm run update-store
