--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "tsc",
     "rebuild": "rm -rf node_modules && npm i && npm run build",
     "lint": "tslint --project tsconfig.json --fix",
-    "update-store": "ts-node lib/updateStore.ts"
+    "update-store": "node ./dist/lib/updateStore.js"
   },
   "keywords": [
     "arvis",
@@ -28,7 +28,6 @@
     "get-npm-downloads": "^0.0.4",
     "husky": "^4.2.5",
     "latest-version": "^5.1.0",
-    "ts-node": "^10.0.0",
     "tslint": "^6.1.3",
     "typescript": "^4.3.4"
   },
