--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,12 +16,17 @@ jobs:
   update-store:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node_version: [12.x]
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Runs a single command using the runners shell
+
       - name: npm install, update store
-        uses: ./
+        with:
+          node-version: ${{ matrix.node_version }}
         run: |
           npm i
+          npm run build
           npm run update-store
