--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,10 +20,10 @@ jobs:
     name: Node ${{ matrix.node }} sample
     steps:
       - uses: actions/checkout@v2
-      - name: Setup node
+      - name: Update store
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node }}
       - run: npm install
       - run: npm run build
-      - run: npm run update-store
+      - run: npm run update-store ${{ secrets.GH_API_KEY }}
