--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "typescript": "^4.3.4"
   },
   "dependencies": {
+    "@octokit/core": "^3.5.1",
+    "@octokit/rest": "^18.6.6",
     "arvis-extension-validator": "^0.2.0",
     "chalk": "^4.1.1",
     "execa": "^5.1.1",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "meow": "^9.0.0",
+    "octokit-commit-multiple-files": "^3.2.1",
     "ora": "^5.4.1",
     "semver": "^7.3.5"
   },
