--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "@octokit/rest": "^18.6.6",
     "arvis-extension-validator": "^0.2.0",
     "chalk": "^4.1.1",
+    "conf": "^10.0.1",
     "execa": "^5.1.1",
+    "find-up": "^5.0.0",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
     "meow": "^9.0.0",
     "octokit-commit-multiple-files": "^3.2.1",
+    "octokit-plugin-create-pull-request": "^3.9.3",
     "ora": "^5.4.1",
     "semver": "^7.3.5"
   },
