--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,18 +1,18 @@
 # This is a basic workflow to help you get started with Actions
 
-name: Store update
+name: Store update when PR is merged
 
 # Controls when the workflow will run
 on:
   # Run every day
-  schedule:
-  - cron: "0 0 * * *"
+  pull_request:
+    types: [ closed ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 jobs:
   update-store:
+    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     strategy:
       matrix:
