--- a/.github/workflows/deleteMergedBranch.yml
+++ b/.github/workflows/deleteMergedBranch.yml
@@ -13,4 +13,4 @@ jobs:
       - name: delete branch
         uses: SvanBoxel/delete-merged-branch@main
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_API_KEY }}
+          GITHUB_TOKEN: ${{ secrets.GH_DELETE }}
