--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "repository": {
     "url": "https://github.com/jopemachine/arvis-store"
   },
-  "author": "jopemachine",
+  "author": {
+    "name": "jopemachine",
+    "email": "jopemachine@gmail.com",
+    "url": "https://jopemachine.github.io/arvis-intro"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^9.0.11",
