--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-store",
-  "version": "0.2.1",
+  "version": "0.2.6",
   "description": "Publish and Retrieve Arvis extension info",
   "main": "dist/lib/index.js",
   "bin": {
@@ -31,7 +31,6 @@
   "license": "MIT",
   "devDependencies": {
     "@types/fs-extra": "^9.0.11",
-    "@types/is-url": "^1.2.29",
     "@types/lodash": "^4.14.170",
     "@types/node": "^15.12.5",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
@@ -48,13 +47,13 @@
     "@octokit/core": "^3.5.1",
     "@octokit/rest": "^18.6.6",
     "alpha-sort": "^4.0.0",
-    "arvis-extension-validator": "^0.2.0",
+    "arvis-extension-validator": "^0.2.1",
     "chalk": "^4.1.1",
+    "clean-stack": "^2.2.0",
     "conf": "^10.0.1",
     "find-up": "^5.0.0",
     "fs-extra": "^10.0.0",
     "got": "^11.8.2",
-    "is-url": "^1.2.4",
     "lodash": "^4.17.21",
     "markdown-table": "^2.0.0",
     "meow": "^9.0.0",
