--- a/.github/workflows/store-update.yml
+++ b/.github/workflows/store-update.yml
@@ -4,9 +4,10 @@ name: Store update
 
 # Controls when the workflow will run
 on:
-  # Run every day
+  # Run every 12 hour
   schedule:
   - cron: "0 0 * * *"
+  - cron: "0 12 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
