--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-store",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "description": "Publish and Retrieve Arvis extension info",
   "main": "dist/lib/index.js",
   "bin": {
@@ -47,7 +47,7 @@
     "@octokit/core": "^3.5.1",
     "@octokit/rest": "^18.6.6",
     "alpha-sort": "^4.0.0",
-    "arvis-extension-validator": "^0.2.1",
+    "arvis-extension-validator": "^0.2.2",
     "chalk": "^4.1.1",
     "clean-stack": "^2.2.0",
     "conf": "^10.0.1",
@@ -59,6 +59,7 @@
     "meow": "^9.0.0",
     "octokit-commit-multiple-files": "^3.2.1",
     "octokit-plugin-create-pull-request": "^3.9.3",
+    "open": "^8.2.1",
     "ora": "^5.4.1",
     "parse-json": "^5.2.0",
     "shorthash2": "^1.0.3"
