--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "arvis-store",
-  "version": "0.2.11",
+  "version": "0.3.1",
   "description": "Publish and Retrieve Arvis extension info",
   "main": "dist/lib/index.js",
   "bin": {
@@ -47,13 +47,14 @@
     "@octokit/core": "^3.5.1",
     "@octokit/rest": "^18.6.6",
     "alpha-sort": "^4.0.0",
-    "arvis-extension-validator": "^0.2.3",
+    "arvis-extension-validator": ">=0.3.0",
     "chalk": "^4.1.1",
     "clean-stack": "^2.2.0",
     "conf": "^10.0.1",
     "find-up": "^5.0.0",
     "fs-extra": "^10.0.0",
     "got": "^11.8.2",
+    "json5": "^2.2.0",
     "lodash": "^4.17.21",
     "markdown-table": "^2.0.0",
     "meow": "^9.0.0",
